==> halfroad/Arm/Experiments/v12.0/STM32H563ZIT6/InApplicationProgram/IAP Bootloader V1.0_FLASH/HARDWARE/WKUP/wkup.c <==
#include "wkup.h"
#include "led.h"
#include "delay.h"
#include "usart.h"
#include "rtc.h"
//////////////////////////////////////////////////////////////////////////////////	 
//本程序只供学习使用，未经作者许可，不得用于其它任何用途
//ALIENTEK STM32F7开发板
//待机唤醒 驱动代码	   
//正点原子@ALIENTEK
//技术论坛:www.openedv.com
//创建日期:2015/11/27
//版本：V1.0
//版权所有，盗版必究。
//Copyright(C) 广州市星翼电子科技有限公司 2014-2024
//All rights reserved									  
////////////////////////////////////////////////////////////////////////////////// 	

#define PWR_WAKEUP_PIN_FLAGS  (PWR_WAKEUP_FLAG1 | PWR_WAKEUP_FLAG2 | PWR_WAKEUP_FLAG3 | \
                               PWR_WAKEUP_FLAG4 | PWR_WAKEUP_FLAG5 | PWR_WAKEUP_FLAG6)

//进入待机模式	  
void Sys_Standby(void)
{ 
 	PWR->WKUPEPR|=1<<0;		//WKUPEN0=1,PA0用于WKUP唤醒
 	PWR->WKUPEPR&=~(1<<8);	//WKUPP0=0,PA0高电平唤醒(上升沿)	
 	PWR->WKUPEPR&=~(3<<16);	//清除WKUPPUPD原来的设置
	PWR->WKUPEPR|=2<<16;	//WKUPPUPD=10,PA0下拉 
	PWR->WKUPCR|=0X3F<<0;	//清除WKUP0~5唤醒标志
	PWR->CPUCR|=7<<0;		//PDDS_D1/D2/D3=1,允许D1/D2/D3进入深度睡眠模式(PDDS) 
	SCB->SCR|=1<<2;			//使能SLEEPDEEP位 (SYS->CTRL)	 
	WFI_SET();				//执行WFI指令,进入待机模式		 
}

//系统进入待机模式
void Sys_Enter_Standby(void)
{
    __HAL_RCC_AHB1_FORCE_RESET();       //复位所有IO口  
	while(WKUP_KD){};                 	//等待WK_UP按键松开(在有RTC中断时,必须等WK_UP松开再进入待机)
    
	HAL_PWR_DisableWakeUpPin(PWR_WAKEUP_PIN1);
		
    __HAL_RCC_BACKUPRESET_FORCE();      //复位备份区域
    HAL_PWR_EnableBkUpAccess();         //后备区域访问使能  
	
    __HAL_PWR_CLEAR_FLAG(PWR_FLAG_SB);
    __HAL_RTC_WRITEPROTECTION_DISABLE(&RTC_Handler);//关闭RTC写保护
    
    //关闭RTC相关中断，可能在RTC实验打开了
    __HAL_RTC_WAKEUPTIMER_DISABLE_IT(&RTC_Handler,RTC_IT_WUT);
    __HAL_RTC_TIMESTAMP_DISABLE_IT(&RTC_Handler,RTC_IT_TS);
    __HAL_RTC_ALARM_DISABLE_IT(&RTC_Handler,RTC_IT_ALRA|RTC_IT_ALRB);
    
    //清除RTC相关中断标志位
    __HAL_RTC_ALARM_CLEAR_FLAG(&RTC_Handler,RTC_FLAG_ALRAF|RTC_FLAG_ALRBF);
    __HAL_RTC_TIMESTAMP_CLEAR_FLAG(&RTC_Handler,RTC_FLAG_TSF); 
    __HAL_RTC_WAKEUPTIMER_CLEAR_FLAG(&RTC_Handler,RTC_FLAG_WUTF);
    
    __HAL_RCC_BACKUPRESET_RELEASE();                    //备份区域复位结束
    __HAL_RTC_WRITEPROTECTION_ENABLE(&RTC_Handler);     //使能RTC写保护
    Sys_Standby();
//    HAL_PWR_EnableWakeUpPin(PWR_WAKEUP_PIN1);
//    HAL_PWR_EnterSTANDBYMode();
}

//检测WKUP脚的信号
//返回值1:连续按下3s以上
//      0:错误的触发	
u8 Check_WKUP(void) 
{
	u8 t=0;
	u8 tx=0;	//记录松开的次数
	LED0(0); 	//亮灯DS0 
	while(1)
	{
		if(WKUP_KD)//已经按下了
		{
			t++;
			tx=0;
		}else 
		{
			tx++; 
			if(tx>3)	//超过90ms内没有WKUP信号
			{
				LED0(1); 
				return 0;//错误的按键,按下次数不够
			}
		}
		delay_ms(30);
		if(t>=100)		//按下超过3秒钟
		{
			LED0(0);	//点亮DS0 
			return 1;	//按下3s以上了
		}
	}
} 

//外部中断线0中断服务函数
void EXTI0_IRQHandler(void)
{
    HAL_GPIO_EXTI_IRQHandler(GPIO_PIN_0);
}

//中断线0中断处理过程
//此函数会被HAL_GPIO_EXTI_IRQHandler()调用
//GPIO_Pin:引脚
void HAL_GPIO_EXTI_Callback(uint16_t GPIO_Pin)
{
    if(GPIO_Pin==GPIO_PIN_0)//PA0
    {
        if(Check_WKUP())//关机
        {
            Sys_Enter_Standby();//进入待机模式
        }
    }    
}


//PA0 WKUP唤醒初始化
void WKUP_Init(void)
{
    GPIO_InitTypeDef GPIO_Initure;
    __HAL_RCC_GPIOA_CLK_ENABLE();			//开启GPIOA时钟
	
    GPIO_Initure.Pin=GPIO_PIN_0;            //PA0
    GPIO_Initure.Mode=GPIO_MODE_IT_RISING;  //中断,上升沿
    GPIO_Initure.Pull=GPIO_PULLDOWN;        //下拉
    HAL_GPIO_Init(GPIOA,&GPIO_Initure);
   
    //检查是否是正常开机
    if(Check_WKUP()==0)
    {
        Sys_Enter_Standby();//不是开机，进入待机模式
    }

    HAL_NVIC_SetPriority(EXTI0_IRQn,1,0);//抢占优先级2，子优先级2
    HAL_NVIC_EnableIRQ(EXTI0_IRQn); 
}
